fix: used lighter color for dark mode code element (#1801)

--- a/docusaurus/src/scss/code.scss
+++ b/docusaurus/src/scss/code.scss
@@ -65,7 +65,7 @@ table {
   body {
     --custom-code-background-color: var(--strapi-neutral-600);
     --custom-code-border-color: var(--strapi-neutral-600);
-    --custom-code-color: var(--strapi-neutral-100);
+    --custom-code-color: var(--strapi-neutral-800);
   }
 
   pre code {
